--- a/projects/demo/src/index.html
+++ b/projects/demo/src/index.html
@@ -5,8 +5,8 @@
   <title>Open source simplify form components for Angular applications.</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/svg+xml" href="/assets/favicon.svg">
-  <link rel="icon" type="image/png" href="/assets/favicon.png">
+  <link rel="icon" type="image/svg+xml" href="./assets/favicon.svg">
+  <link rel="icon" type="image/png" href="./assets/favicon.png">
 </head>
 <body>
   <app-root></app-root>
